force-app/main/default/objects/HS_Chapters__c/fields/HS_Chapter_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_Chapter_Code__c</fullName>
    <label>HS Chapter Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>