force-app/main/default/objects/HS_Chapters__c/fields/HS_Region__c.field-meta.xml
<CustomField>
    <fullName>HS_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS Region</label>
    <referenceTo>HS_Region__c</referenceTo>
    <relationshipLabel>HS Chapters</relationshipLabel>
    <relationshipName>HS_Chapters</relationshipName>
    <type>Lookup</type>
</CustomField>