force-app/main/default/objects/HS_Chapters__c/fields/HS_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_Region_Code__c</fullName>
    <formula>HS_Region__r.HS_Region_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS Region Code</label>
    <type>Text</type>
</CustomField>